fix: stabilise JDK 25 nightly flakes